--- a/blog/site/_data/events.yml
+++ b/blog/site/_data/events.yml
@@ -1,3 +1,3 @@
 - title: "Roq 1.0 Beta"
-  description: "This is the first version of Roq. It is not yet feature complete to cover all the need of a blog."
+  description: "You can start building your site or blog with Roq. More features will come to cover all the needs you can expect from an awesome SSG!"
   date: "2024-10-01"
