--- a/plugin/aliases/pom.xml
+++ b/plugin/aliases/pom.xml
@@ -4,16 +4,16 @@
 
     <parent>
         <groupId>io.quarkiverse.roq</groupId>
-        <artifactId>quarkus-roq-parent</artifactId>
+        <artifactId>quarkus-roq-plugin-parent</artifactId>
         <version>999-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>quarkus-roq-plugin-parent</artifactId>
+    <artifactId>quarkus-roq-plugin-aliases-parent</artifactId>
     <packaging>pom</packaging>
-    <name>Quarkus Roq - Plugins</name>
+    <name>Quarkus Roq - Plugin - Aliases</name>
 
     <modules>
-        <module>tagging</module>
-        <module>aliases</module>
+        <module>deployment</module>
+        <module>runtime</module>
     </modules>
 </project>
